--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 ██╔══██║╚██╗ ██╔╝██║██║   ██║██║╚██╗██║
 ██║  ██║ ╚████╔╝ ██║╚██████╔╝██║ ╚████║
 ╚═╝  ╚═╝  ╚═══╝  ╚═╝ ╚═════╝ ╚═╝  ╚═══╝</pre>
-        <button class="enter-button" onclick="window.location.href='home.html'">INITIALIZE SYSTEM</button>
+        <button class="enter-button" onclick="window.location.href='/home'">INITIALIZE SYSTEM</button>
     </div>
     <div class="code-scroll" id="codeScroll"></div>
     <div class="contract-box">
