--- a/home.html
+++ b/home.html
@@ -338,8 +338,8 @@
                 <a href="#" class="social-button telegram">
                     <i class="fab fa-telegram-plane"></i>
                 </a>
-                <button class="nav-button" onclick="window.location.href='generator.html'">Launch AVION™</button>
-                <button class="nav-button" onclick="window.location.href='whitepaper.html'">Whitepaper</button>
+                <button class="nav-button" onclick="window.location.href='/generator'">Launch AVION™</button>
+                <button class="nav-button" onclick="window.location.href='/whitepaper'">Whitepaper</button>
                 <button class="nav-button" onclick="window.open('https://github.com/Avion-AI/Avion')">GitHub</button>
             </div>
         </nav>
