--- a/generator.html
+++ b/generator.html
@@ -497,7 +497,7 @@
             <a href="#" class="social-button telegram">
                 <i class="fa-brands fa-telegram"></i>
             </a>
-            <button class="header-button" onclick="window.location.href='whitepaper.html'">WHITEPAPER</button>
+            <button class="header-button" onclick="window.location.href='/whitepaper'">WHITEPAPER</button>
             <button class="header-button" onclick="window.open('https://github.com/Avion-AI/Avion')">GITHUB</button>
         </div>
     </header>
