--- a/whitepaper.html
+++ b/whitepaper.html
@@ -333,7 +333,7 @@
                 <a href="#" class="social-button telegram">
                     <i class="fab fa-telegram-plane"></i>
                 </a>
-                <button class="nav-button" onclick="window.location.href='/generator'">Launch Generator</button>
+                <button class="nav-button" onclick="window.location.href='generator.html'">Launch Generator</button>
                 <button class="nav-button" onclick="window.open('https://github.com/Avion-AI/Avion')">GitHub</button>
             </div>
         </nav>
