--- a/home.html
+++ b/home.html
@@ -338,8 +338,8 @@
                 <a href="#" class="social-button telegram">
                     <i class="fab fa-telegram-plane"></i>
                 </a>
-                <button class="nav-button" onclick="window.location.href='generator.html'">Launch AVION™</button>
-                <button class="nav-button" onclick="window.location.href='whitepaper.html'">Whitepaper</button>
+                <button class="nav-button" onclick="window.location.href='/generator'">Launch AVION™</button>
+                <button class="nav-button" onclick="window.location.href='/whitepaper'">Whitepaper</button>
                 <button class="nav-button" onclick="window.open('https://github.com/Avion-AI/Avion')">GitHub</button>
             </div>
         </nav>
@@ -350,7 +350,7 @@
         <div class="hero-content">
             <h1>AVION™</h1>
             <p class="hero-subtitle">The First AI-Powered Token Generation Protocol</p>
-            <button class="cta-button" onclick="window.location.href='generator.html'">Launch AVION™</button>
+            <button class="cta-button" onclick="window.location.href='/generator'">Launch AVION™</button>
             <div class="contract-box">
                 <span class="contract-address">XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</span>
                 <i class="fas fa-copy copy-icon" onclick="copyContract()"></i>
@@ -448,7 +448,7 @@
         <div class="tech-card" style="text-align: center; max-width: 800px; margin: 0 auto;">
             <h3>Intelligent Token Generation</h3>
             <p>AVION's advanced AI system combines Claude's adaptive learning capabilities with real-time market analysis to create tokens that resonate with the crypto community. By continuously analyzing successful token patterns, social media trends, and market dynamics, our system ensures each generated token is optimized for maximum impact and engagement.</p>
-            <button class="cta-button" onclick="window.location.href='generator.html'" style="margin-top: 20px;">Launch Generator</button>
+            <button class="cta-button" onclick="window.location.href='/generator'" style="margin-top: 20px;">Launch Generator</button>
         </div>
     </section>
 
