--- a/generator.html
+++ b/generator.html
@@ -491,7 +491,7 @@
     <header class="header">
         <div class="logo">AVION</div>
         <div class="header-buttons">
-            <a href="#" class="social-button twitter">
+            <a href="https://x.com/Avion_AI" class="social-button twitter">
                 <i class="fa-brands fa-twitter"></i>
             </a>
             <button class="header-button" onclick="window.location.href='/whitepaper'">WHITEPAPER</button>
