--- a/whitepaper.html
+++ b/whitepaper.html
@@ -327,7 +327,7 @@
         <nav class="nav-container">
             <a href="/home" class="logo">AVION</a>
             <div class="nav-links">
-                <a href="#" class="social-button twitter">
+                <a href="https://x.com/Avion_AI" class="social-button twitter">
                     <i class="fab fa-twitter"></i>
                 </a>
                 <button class="nav-button" onclick="window.location.href='generator.html'">Launch Generator</button>
