--- a/generator.html
+++ b/generator.html
@@ -491,8 +491,11 @@
     <header class="header">
         <div class="logo">AVION</div>
         <div class="header-buttons">
-            <a href="https://x.com/Avion_AI" class="social-button twitter">
+            <a href="#" class="social-button twitter">
                 <i class="fa-brands fa-twitter"></i>
+            </a>
+            <a href="#" class="social-button telegram">
+                <i class="fa-brands fa-telegram"></i>
             </a>
             <button class="header-button" onclick="window.location.href='/whitepaper'">WHITEPAPER</button>
             <button class="header-button" onclick="window.open('https://github.com/Avion-AI/Avion')">GITHUB</button>
