--- a/generator.html
+++ b/generator.html
@@ -899,23 +899,30 @@
             
             const request = async () => {
                 try {
-                    const response = await fetch(
-                        'https://avionai.net/api/generate',
-                        {
-                            method: 'POST',
-                            headers: {
-                                'Content-Type': 'application/json'
-                            },
-                            body: JSON.stringify({ 
-                                idea: input,
-                                artStyle: selectedStyle
-                            })
-                        }
-                    );
+                    const apiUrl = window.location.hostname === 'localhost' 
+                        ? 'http://localhost:8000/api/generate'
+                        : 'https://avionai-production.up.railway.app/api/generate';
+
+                    const response = await fetch(apiUrl, {
+                        method: 'POST',
+                        headers: {
+                            'Content-Type': 'application/json',
+                            'Accept': 'application/json'
+                        },
+                        body: JSON.stringify({ 
+                            idea: input,
+                            artStyle: selectedStyle
+                        })
+                    });
 
                     if (!response.ok) {
-                        const errorData = await response.json();
-                        throw new Error(errorData.error || 'Failed to generate image');
+                        const contentType = response.headers.get('content-type');
+                        if (contentType && contentType.includes('application/json')) {
+                            const errorData = await response.json();
+                            throw new Error(errorData.error || 'Failed to generate');
+                        } else {
+                            throw new Error(`HTTP error! status: ${response.status}`);
+                        }
                     }
 
                     const data = await response.json();
