--- a/generator.html
+++ b/generator.html
@@ -896,8 +896,10 @@
 
             const request = async () => {
                 try {
-                    const response = await fetch('/api/generate', {
+                    const response = await fetch('https://avionai-production.up.railway.app/api/generate', {
                         method: 'POST',
+                        mode: 'cors',
+                        credentials: 'omit',
                         headers: {
                             'Content-Type': 'application/json',
                             'Accept': 'application/json'
