--- a/generator.html
+++ b/generator.html
@@ -896,13 +896,10 @@
 
             const request = async () => {
                 try {
-                    const response = await fetch('https://avionai-production.up.railway.app/api/generate', {
+                    const response = await fetch('https://avion-production.up.railway.app/api/generate', {
                         method: 'POST',
-                        mode: 'cors',
-                        credentials: 'omit',
                         headers: {
-                            'Content-Type': 'application/json',
-                            'Accept': 'application/json'
+                            'Content-Type': 'application/json'
                         },
                         body: JSON.stringify({ 
                             idea: input,
