--- a/generator.html
+++ b/generator.html
@@ -898,8 +898,10 @@
                 try {
                     const response = await fetch('https://avion-production.up.railway.app/api/generate', {
                         method: 'POST',
+                        credentials: 'include',
                         headers: {
-                            'Content-Type': 'application/json'
+                            'Content-Type': 'application/json',
+                            'Origin': 'https://avionai.net'
                         },
                         body: JSON.stringify({ 
                             idea: input,
