--- a/generator.html
+++ b/generator.html
@@ -898,6 +898,7 @@
                 try {
                     const response = await fetch('https://avion-production.up.railway.app/api/generate', {
                         method: 'POST',
+                        mode: 'cors',
                         headers: {
                             'Content-Type': 'application/json'
                         },
